--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,6 +31,6 @@ body {
   margin: 0 auto;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
+/* #header-and-tweet-container{
+  display: flex;
+} */
