--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,7 @@
 .form {
   display: flex;
   flex-direction: column;
+  margin-top:30px;
 }
 
 .btnAndCounter {
